--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jabsa-crm-frontend",
+  "name": "react-starter-kit",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -14,6 +14,7 @@
     "@types/node": "^16.18.39",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
+    "enquirer": "^2.4.1",
     "fs": "^0.0.1-security",
     "i18next": "^23.4.1",
     "i18next-browser-languagedetector": "^7.1.0",
@@ -33,7 +34,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "generate-page": "node generatePage.js"
+    "generate": "node generator/generate"
   },
   "eslintConfig": {
     "extends": [
